﻿===== Hasor-Core v2.4.7 (2016-10-?)
* 新增:
    01.新增 ClassAwareProvider、InfoAwareProvider 两个工具类。
    02.Hasor 新增一个 autoAware 方法的重载。
* 改进:
    01.升级依赖 slf4j-api 到 1.7.21 版本。

===== Hasor-Core v2.4.6 (2016-10-07)
* 新增:
    01.restful插件增加,json; 拦截。
    02.WebEnvironment、WebAppContext可以被依赖注入了。
    03.所有接口类型参数传入,都走 AppContext 获取。
    04.upload包变更。
    05.新增 WebAppContext.HTTP_BEFORE_REQUEST 和 WebAppContext.HTTP_AFTER_RESPONSE 事件。
    06.新增了 ScopeManager 接口用于优化 Scope 的注册。
* 改进:
    01.改进 RenderData 接口使其更加人性化一点。
    02.RenderData 的数据不在保存在自己独立的 map 中而是共同 Request Attr。
    03.@ValidBy 注解支持配置多个表单验证器。
* 修复:
    01.fix restful插件,action方法中无法传入 response 的问题。

===== Hasor-Core v2.4.5 (2016-09-29)
* 新增:
    01.BindInfo 新增 setMetaData 方法以设置元信息。
    02.BindInfo 新增 removeMetaData 删除元数据的方法。
    03.BizCommon 包增加 log 工具。
    04.Spring 集成插件,新增支持将 Spring 容器中的 属性配置文件导入 Hasor 作为环境变量。
    05.@InjectSettings 注解支持通过 "${xxx}" 形式解析并注入环境变量了。(至此注入环境变量不再需要通过 hasor 配置文件中转)
* 改进:
    01.JSON 包简化了对 Log 的输出处理,减少了 5 个日志相关类。
    02.Spring集成时,支持通过 Spring 方式来指定 Hasor 的配置文件。
    03.Spring集成下,env.config 将会失效,环境配置属性需要通过 Spring导入。
    04.AbstractEnvironment 类的 afterInitEnvironment 方法取消参数传入。
    05.AbstractEnvironment 类的 initEnvironment 方法增加boolean参数来决定是否启用 env.config 配置文件。
    06.LinkedCaseInsensitiveMap类提升为公共工具类,包位置发生变更。
* 修复:
    01.Fix Settings 接口的 add & remove & set 系方法,解决 settings key 出现大小写敏感问题。
    02.Fix AbstractEnvironment 的 refreshVariables 方法,忽略了对默认值的替换,导致了bug出现。
    03.Fix Environment 接口拼写错误的方法名。remoteEnvVar -> removeEnvVar。

===== Hasor-Core v2.4.4 (2016-09-05)
* 新增:
    01.宽泛的Servlet版本支持 servlet 2.3 到 servlet 3.1。
    02.新增支持文件上传功能支持。
    03.新增 @Async 注解,用于标记 restful 请求是否以 异步 servlet 方式执行。(需要容器支持 servlet 3 ,否则无效)
    04.如果容器支持 Servlet 3 那么 Hasor 会自动启用 Servlet 3.0 特性。
    05.servlet3: 基于 web-fragment 技术,您的 web.xml 中不需要任何配置或者您干脆删除 web.xml。
    06.servlet3: 支持通过@Async注解开启异步Servlet。
    07.servlet3: 文件上传共功能可以基于@Async转为异步文件上传(感谢:哎瑞！麓孩 提供的实现思路,这里是他的blog, http://ysj12.lofter.com/)。
* 改进: